# JOIPEngine

./: .gitignore  .gitmodules  AndroidSetup.txt  CApplication.cpp  CApplication.h  CMakeLists.txt  CSettings.cpp  CSettings.h  FileBrowser.qml  FileBrowserForm.ui.qml  HomeForm.ui.qml  JOIPEngine.pro  MainScreen.ui  MainWindow.cpp  README.md  SceneSelectionScreen.cpp  SettingsPage.qml  SettingsPage.ui.qml  SettingsScreen.h  android_resources.qrc  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  resources.qrc  version.cpp  version.h  version.h.in  version_win.rc  version_win.rc.in
src/: Application.cpp  Application.h  CMakeLists.txt  ClipboardQmlWrapper.cpp  ClipboardQmlWrapper.h  Constants.h  CreditsScreen.cpp  CreditsScreen.h  CreditsScreen.ui  DownloadScreen.cpp  DownloadScreen.h  DownloadScreen.ui  EditorScreen.cpp  EditorScreen.h  EditorScreen.ui  Enums.h  IAppStateScreen.h  JOIPEngineProject.cmake  MainScreen.cpp  MainScreen.h  MainScreen.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowFactory.cpp  MainWindowFactory.h  SVersion.h  SceneScreen.cpp  SceneScreen.h  SceneScreen.ui  SceneSelectionScreen.cpp  SceneSelectionScreen.h  SceneSelectionScreen.ui  Settings.cpp  Settings.h  SettingsScreen.cpp  SettingsScreen.h  SettingsScreen.ui  Style.cpp  Style.h  (+7 more)
src/Android/: AndroidApplicationWindow.cpp  AndroidApplicationWindow.h  AndroidMainWindow.cpp  AndroidMainWindow.h  AndroidNavigationBar.cpp  AndroidNavigationBar.h  AndroidNotificationClient.cpp  AndroidNotificationClient.h
src/Backend/: DatabaseAccessObject.cpp  DatabaseAccessObject.h  DatabaseManager.cpp  DatabaseManager.h  Project.cpp  Project.h  Resource.cpp  Resource.h  Scene.cpp  Scene.h  ScriptBackground.cpp  ScriptBackground.h  ScriptIcon.cpp  ScriptIcon.h  ScriptMediaPlayer.cpp  ScriptMediaPlayer.h  ScriptRunner.cpp  ScriptRunner.h  ScriptRunnerSignalEmiter.cpp  ScriptRunnerSignalEmiter.h  ScriptStorage.cpp  ScriptStorage.h  ScriptTextBox.cpp  ScriptTextBox.h  ScriptThread.cpp  ScriptThread.h  ScriptTimer.cpp  ScriptTimer.h  ThreadedSystem.cpp  ThreadedSystem.h
src/Editor/: CommandChangeTag.cpp  CommandChangeTag.h  EditorActionBar.cpp  EditorActionBar.h  EditorActionBar.ui  EditorChoiceScreen.cpp  EditorChoiceScreen.h  EditorChoiceScreen.ui  EditorCodeWidget.cpp  EditorCodeWidget.h  EditorCodeWidget.ui  EditorCommandIds.h  EditorEditableFileModel.cpp  EditorEditableFileModel.h  EditorJobWorker.cpp  EditorJobWorker.h  EditorMainScreen.cpp  EditorMainScreen.h  EditorMainScreen.ui  EditorModel.cpp  EditorModel.h  EditorProjectSettingsWidget.cpp  EditorProjectSettingsWidget.h  EditorProjectSettingsWidget.ui  EditorResourceDisplayWidget.cpp  EditorResourceDisplayWidget.h  EditorResourceDisplayWidget.ui  EditorResourceWidget.cpp  EditorResourceWidget.h  EditorResourceWidget.ui  EditorSceneNodeWidget.cpp  EditorSceneNodeWidget.h  EditorWidgetBase.cpp  EditorWidgetBase.h  EditorWidgetRegistry.h  EditorWidgetTypes.h  IEditorTool.h  ResourceTreeItem.cpp  ResourceTreeItem.h  ResourceTreeItemModel.cpp  (+5 more)
src/Launcher/: CMakeLists.txt  main.cpp
src/Linux/: LinuxMainWindow.cpp  LinuxMainWindow.h
src/Player/: BackgroundWidget.cpp  InformationWidget.cpp  InformationWidget.ui  MetronomePaintedWidget.cpp  MetronomePaintedWidget.h  ProjectDialogManager.cpp  ProjectDialogManager.h  ProjectDialogueManager.cpp  ProjectDialogueManager.h  ProjectEventTarget.cpp  ProjectEventTarget.h  ProjectNotificationManager.cpp  ProjectNotificationManager.h  ProjectRunner.cpp  ProjectRunner.h  ProjectSavegameManager.cpp  ProjectSavegameManager.h  ProjectSceneManager.cpp  ProjectSceneManager.h  ProjectSoundManager.cpp  ProjectSoundManager.h  SceneMainScreen.cpp  SceneMainScreen.h  SceneMainScreen.ui  SceneNodeResolver.cpp  TeaseDeviceController.cpp  TeaseDeviceController.h  TeaseStorage.cpp  TeaseStorage.h  TextBoxWidget.cpp  TextBoxWidget.ui  TimerDisplayWidget.ui  TimerWidget.cpp  TimerWidget.h
src/RCC/: 0002-Made-RCCFileInfo-and-RCCResourceLibrary-addFile-publ.patch  0003-RCCFileInfo-can-be-pre-filled-with-data-instead-of-g.patch  CMakeLists.txt  main.cpp  rcc.cpp  rcc.h  rcc_runner.h
src/Scenes/: BackgroundWidget.cpp  FlowLayout.cpp  InformationWidget.cpp  InformationWidget.h  InformationWidget.ui  ProjectCardSelectionWidget.h  ProjectCardWidget.cpp  ProjectCardWidget.h  ProjectCardWidget.ui  ProjectRunner.cpp  ProjectRunner.h  SceneMainScreen.cpp  SceneMainScreen.h  SceneMainScreen.ui  TextBoxWidget.cpp  TextBoxWidget.h  TextBoxWidget.ui  TimerDisplayWidget.cpp  TimerDisplayWidget.h  TimerDisplayWidget.ui  TimerWidget.cpp  TimerWidget.h  TimerWidget.ui
src/Systems/: BackActionHandler.cpp  BackActionHandler.h  DatabaseData.cpp  DatabaseIO.cpp  DatabaseIO.h  DatabaseImageProvider.cpp  DatabaseImageProvider.h  DatabaseManager.cpp  DatabaseManager.h  DeviceManager.cpp  DeviceManager.h  DialogTree.cpp  DialogTree.h  DialogueTree.cpp  DialogueTree.h  HelpFactory.cpp  HelpFactory.h  IRunnableJob.h  ISerializable.h  Kink.cpp  Kink.h  Lockable.h  MetronomeManager.cpp  MetronomeManager.h  NotificationSender.cpp  NotificationSender.h  OverlayManager.cpp  OverlayManager.h  Project.cpp  Project.h  ProjectDownloader.cpp  ProjectDownloader.h  ProjectJobWorker.cpp  ProjectJobWorker.h  Resource.cpp  Resource.h  ResourceBundle.cpp  ResourceBundle.h  SaveData.h  Scene.cpp  (+11 more)
src/Updater/: Application.cpp  Application.h  CMakeLists.txt  SettingsData.h  Splash.cpp  Splash.h  Unzipper.cpp  Unzipper.h  Updater.cpp  Updater.h  main.cpp  resources.qrc
src/Utils/: LockedType.h  MetronomeHelpers.cpp  MetronomeHelpers.h  MultiEmitterSoundPlayer.cpp  MultiEmitterSoundPlayer.h  PlatformHelpers.cpp  PlatformHelpers.h  RaiiFunctionCaller.cpp  RaiiFunctionCaller.h  ThreadUtils.cpp  ThreadUtils.h  UndoRedoFilter.cpp  UndoRedoFilter.h  WidgetHelpers.cpp  WidgetHelpers.h
src/Widgets/: AgeCheckOverlay.cpp  AgeCheckOverlay.h  AgeCheckOverlay.ui  BackgroundWidget.cpp  BackgroundWidget.h  ColorPicker.cpp  ColorPicker.h  ColorPicker.ui  DebugButtonOverlay.cpp  DebugButtonOverlay.h  DeviceButtonOverlay.cpp  DeviceButtonOverlay.h  DeviceSelectorWidget.cpp  (+59 more)
(+1064 files in other folders)
