cmake_minimum_required(VERSION 3.5)

project(JOIPEngine LANGUAGES CXX)

include(JOIPCommon)
include(QtAV/FindQtAV)

find_package(Qt5 COMPONENTS
    Core
    Multimedia
    MultimediaWidgets
    Network
    OpenGL
    Qml
    Quick
    QuickControls2
    QuickWidgets
    Svg
    Widgets
    WebChannel
    Xml
  REQUIRED)

set(Sources
  Application.cpp 
  Application.h 
  Constants.h 
  CreditsScreen.cpp 
  CreditsScreen.h 
  CreditsScreen.ui 
  ClipboardQmlWrapper.cpp
  ClipboardQmlWrapper.h
  Editor/EditorActionBar.cpp 
  Editor/EditorActionBar.h 
  Editor/EditorActionBar.ui 
  Editor/EditorChoiceScreen.cpp 
  Editor/EditorChoiceScreen.h 
  Editor/EditorChoiceScreen.ui 
  Editor/EditorCommandIds.h
  Editor/EditorLayouts/EditorLayoutBase.cpp
  Editor/EditorLayouts/EditorLayoutBase.h
  Editor/EditorLayouts/EditorLayoutClassic.cpp
  Editor/EditorLayouts/EditorLayoutClassic.h
  Editor/EditorLayouts/EditorLayoutClassic.ui
  Editor/EditorLayouts/EditorLayoutModern.cpp
  Editor/EditorLayouts/EditorLayoutModern.h
  Editor/EditorLayouts/EditorLayoutModern.ui
  Editor/EditorLayouts/IEditorLayoutViewProvider.h
  Editor/EditorMainScreen.cpp 
  Editor/EditorMainScreen.h 
  Editor/EditorMainScreen.ui 
  Editor/EditorModel.cpp 
  Editor/EditorModel.h 
  Editor/EditorWidgets/EditorCodeWidget.cpp
  Editor/EditorWidgets/EditorCodeWidget.h
  Editor/EditorWidgets/EditorCodeWidget.ui
  Editor/EditorWidgets/EditorProjectSettingsWidget.cpp
  Editor/EditorWidgets/EditorProjectSettingsWidget.h
  Editor/EditorWidgets/EditorProjectSettingsWidget.ui
  Editor/EditorWidgets/EditorResourceDisplayWidget.cpp
  Editor/EditorWidgets/EditorResourceDisplayWidget.h
  Editor/EditorWidgets/EditorResourceDisplayWidget.ui
  Editor/EditorWidgets/EditorResourceWidget.cpp
  Editor/EditorWidgets/EditorResourceWidget.h
  Editor/EditorWidgets/EditorResourceWidget.ui
  Editor/EditorWidgets/EditorSceneNodeWidget.cpp
  Editor/EditorWidgets/EditorSceneNodeWidget.h
  Editor/EditorWidgets/EditorSceneNodeWidget.ui
  Editor/EditorWidgets/EditorWidgetBase.cpp
  Editor/EditorWidgets/EditorWidgetBase.h
  Editor/EditorWidgetRegistry.h
  Editor/EditorWidgetTypes.h 
  Editor/NodeEditor/CommandChangeSelection.cpp
  Editor/NodeEditor/CommandChangeSelection.h
  Editor/NodeEditor/CommandConnectionAdded.cpp
  Editor/NodeEditor/CommandConnectionAdded.h
  Editor/NodeEditor/CommandConnectionRemoved.cpp
  Editor/NodeEditor/CommandConnectionRemoved.h
  Editor/NodeEditor/CommandNodeAdded.cpp
  Editor/NodeEditor/CommandNodeAdded.h
  Editor/NodeEditor/CommandNodeEdited.cpp
  Editor/NodeEditor/CommandNodeEdited.h
  Editor/NodeEditor/CommandNodeMoved.cpp
  Editor/NodeEditor/CommandNodeMoved.h
  Editor/NodeEditor/CommandNodeRemoved.cpp
  Editor/NodeEditor/CommandNodeRemoved.h
  Editor/NodeEditor/EditorNodeModelBase.cpp
  Editor/NodeEditor/EditorNodeModelBase.h
  Editor/NodeEditor/EndNodeModel.cpp 
  Editor/NodeEditor/EndNodeModel.h 
  Editor/NodeEditor/FlowScene.cpp
  Editor/NodeEditor/FlowScene.h
  Editor/NodeEditor/FlowView.cpp 
  Editor/NodeEditor/FlowView.h 
  Editor/NodeEditor/IUndoStackAwareModel.h
  Editor/NodeEditor/PathMergerModel.cpp 
  Editor/NodeEditor/PathMergerModel.h 
  Editor/NodeEditor/PathSplitterModel.cpp 
  Editor/NodeEditor/PathSplitterModel.h 
  Editor/NodeEditor/PathSplitterModelWidget.cpp 
  Editor/NodeEditor/PathSplitterModelWidget.h 
  Editor/NodeEditor/PathSplitterModelWidget.ui 
  Editor/NodeEditor/SceneNodeModel.cpp 
  Editor/NodeEditor/SceneNodeModel.h 
  Editor/NodeEditor/SceneNodeModelWidget.cpp 
  Editor/NodeEditor/SceneNodeModelWidget.h 
  Editor/NodeEditor/SceneNodeModelWidget.ui 
  Editor/NodeEditor/SceneTranstitionData.cpp 
  Editor/NodeEditor/SceneTranstitionData.h 
  Editor/NodeEditor/StartNodeModel.cpp 
  Editor/NodeEditor/StartNodeModel.h 
  Editor/Project/CommandChangeDescribtion.cpp
  Editor/Project/CommandChangeDescribtion.h
  Editor/Project/CommandChangeEmitterCount.cpp
  Editor/Project/CommandChangeEmitterCount.h
  Editor/Project/CommandChangeFetishes.cpp
  Editor/Project/CommandChangeFetishes.h
  Editor/Project/CommandChangeProjectName.cpp
  Editor/Project/CommandChangeProjectName.h
  Editor/Project/CommandChangeVersion.cpp
  Editor/Project/CommandChangeVersion.h
  Editor/Project/KinkCompleter.cpp 
  Editor/Project/KinkCompleter.h 
  Editor/Project/KinkSelectionOverlay.cpp 
  Editor/Project/KinkSelectionOverlay.h 
  Editor/Project/KinkSelectionOverlay.ui
  Editor/Project/KinkTreeItem.cpp 
  Editor/Project/KinkTreeItem.h 
  Editor/Project/KinkTreeModel.cpp 
  Editor/Project/KinkTreeModel.h 
  Editor/Project/KinkTreeSortFilterProxyModel.cpp
  Editor/Project/KinkTreeSortFilterProxyModel.h
  Editor/Resources/CommandAddResource.cpp
  Editor/Resources/CommandAddResource.h
  Editor/Resources/CommandChangeCurrentResource.cpp
  Editor/Resources/CommandChangeCurrentResource.h
  Editor/Resources/CommandChangeFilter.cpp
  Editor/Resources/CommandChangeFilter.h
  Editor/Resources/CommandChangeResourceData.cpp
  Editor/Resources/CommandChangeResourceData.h
  Editor/Resources/CommandChangeSource.cpp
  Editor/Resources/CommandChangeSource.h
  Editor/Resources/CommandChangeTitleCard.cpp
  Editor/Resources/CommandChangeTitleCard.h
  Editor/Resources/CommandRemoveResource.cpp
  Editor/Resources/CommandRemoveResource.h
  Editor/Resources/ResourceDetailView.cpp
  Editor/Resources/ResourceDetailView.h
  Editor/Resources/ResourceDetailViewFetcherThread.cpp
  Editor/Resources/ResourceDetailViewFetcherThread.h
  Editor/Resources/ResourceModelView.cpp
  Editor/Resources/ResourceModelView.h
  Editor/Resources/ResourceModelView.ui
  Editor/Resources/ResourceTreeItem.cpp 
  Editor/Resources/ResourceTreeItem.h 
  Editor/Resources/ResourceTreeItemModel.cpp 
  Editor/Resources/ResourceTreeItemModel.h 
  Editor/Resources/ResourceTreeItemSortFilterProxyModel.cpp 
  Editor/Resources/ResourceTreeItemSortFilterProxyModel.h 
  Editor/Resources/WebResourceOverlay.cpp 
  Editor/Resources/WebResourceOverlay.h 
  Editor/Resources/WebResourceOverlay.ui 
  Editor/Script/BackgroundSnippetOverlay.cpp 
  Editor/Script/BackgroundSnippetOverlay.h 
  Editor/Script/BackgroundSnippetOverlay.ui 
  Editor/Script/CommandChangeOpenedScript.cpp
  Editor/Script/CommandChangeOpenedScript.h
  Editor/Script/CommandScriptContentChange.cpp
  Editor/Script/CommandScriptContentChange.h
  Editor/Script/IconSnippetOverlay.cpp 
  Editor/Script/IconSnippetOverlay.h 
  Editor/Script/IconSnippetOverlay.ui 
  Editor/Script/MetronomeSnippetOverlay.cpp
  Editor/Script/MetronomeSnippetOverlay.h
  Editor/Script/MetronomeSnippetOverlay.ui
  Editor/Script/ResourceSnippetOverlay.cpp 
  Editor/Script/ResourceSnippetOverlay.h 
  Editor/Script/ResourceSnippetOverlay.ui 
  Editor/Script/ScriptEditorModel.cpp 
  Editor/Script/ScriptEditorModel.h 
  Editor/Script/ScriptEditorWidget.cpp 
  Editor/Script/ScriptEditorWidget.h 
  Editor/Script/TextSnippetOverlay.cpp 
  Editor/Script/TextSnippetOverlay.h 
  Editor/Script/TextSnippetOverlay.ui 
  Editor/Script/ThreadSnippetOverlay.cpp 
  Editor/Script/ThreadSnippetOverlay.h 
  Editor/Script/ThreadSnippetOverlay.ui 
  Editor/Script/TimerSnippetOverlay.cpp 
  Editor/Script/TimerSnippetOverlay.h 
  Editor/Script/TimerSnippetOverlay.ui 
  Editor/Tutorial/CodeWidgetTutorialStateSwitchHandler.cpp
  Editor/Tutorial/CodeWidgetTutorialStateSwitchHandler.h
  Editor/Tutorial/CommandBackground.cpp
  Editor/Tutorial/CommandBackground.h
  Editor/Tutorial/CommandClickFilter.cpp
  Editor/Tutorial/CommandClickFilter.h
  Editor/Tutorial/CommandHighlight.cpp
  Editor/Tutorial/CommandHighlight.h
  Editor/Tutorial/CommandText.cpp
  Editor/Tutorial/CommandText.h
  Editor/Tutorial/EditorTutorialOverlay.cpp
  Editor/Tutorial/EditorTutorialOverlay.h
  Editor/Tutorial/ITutorialStateSwitchHandler.cpp
  Editor/Tutorial/ITutorialStateSwitchHandler.h
  Editor/Tutorial/MainScreenTutorialStateSwitchHandler.cpp
  Editor/Tutorial/MainScreenTutorialStateSwitchHandler.h
  Editor/Tutorial/ProjectSettingsTutorialStateSwitchHandler.cpp
  Editor/Tutorial/ProjectSettingsTutorialStateSwitchHandler.h
  Editor/Tutorial/ResourceDisplayTutorialStateSwitchHandler.cpp
  Editor/Tutorial/ResourceDisplayTutorialStateSwitchHandler.h
  Editor/Tutorial/ResourceTutorialStateSwitchHandler.cpp
  Editor/Tutorial/ResourceTutorialStateSwitchHandler.h
  Editor/Tutorial/SceneNodeWidgetTutorialStateSwitchHandler.cpp
  Editor/Tutorial/SceneNodeWidgetTutorialStateSwitchHandler.h
  EditorScreen.cpp 
  EditorScreen.h 
  EditorScreen.ui 
  Enums.h 
  IAppStateScreen.h 
  MainScreen.cpp 
  MainScreen.h 
  MainScreen.ui 
  MainWindow.cpp 
  MainWindow.h 
  MainWindow.ui 
  Player/InformationWidget.cpp 
  Player/InformationWidget.h 
  Player/InformationWidget.ui 
  Player/MetronomePaintedWidget.cpp
  Player/MetronomePaintedWidget.h
  Player/ProjectRunner.cpp 
  Player/ProjectRunner.h 
  Player/SceneMainScreen.cpp 
  Player/SceneMainScreen.h 
  Player/SceneMainScreen.ui 
  Player/TextBoxWidget.cpp 
  Player/TextBoxWidget.h 
  Player/TextBoxWidget.ui 
  Player/TimerDisplayWidget.cpp 
  Player/TimerDisplayWidget.h 
  Player/TimerDisplayWidget.ui 
  Player/TimerWidget.cpp 
  Player/TimerWidget.h 
  SVersion.h 
  SceneScreen.cpp 
  SceneScreen.h 
  SceneScreen.ui 
  Settings.cpp 
  Settings.h 
  SettingsScreen.cpp 
  SettingsScreen.h 
  SettingsScreen.ui 
  Style.cpp 
  Style.h 
  Systems/DatabaseImageProvider.cpp 
  Systems/DatabaseImageProvider.h 
  Systems/DatabaseManager.cpp 
  Systems/DatabaseManager.h 
  Systems/HelpFactory.cpp 
  Systems/HelpFactory.h 
  Systems/ISerializable.h 
  Systems/Kink.cpp 
  Systems/Kink.h 
  Systems/Lockable.h
  Systems/OverlayManager.cpp 
  Systems/OverlayManager.h 
  Systems/PhysFs/PhysFsFileEngine.cpp
  Systems/PhysFs/PhysFsFileEngine.h
  Systems/PhysFs/PhysFsQtAVIntegration.cpp
  Systems/PhysFs/PhysFsQtAVIntegration.h
  Systems/Project.cpp 
  Systems/Project.h 
  Systems/Resource.cpp 
  Systems/Resource.h 
  Systems/Scene.cpp 
  Systems/Scene.h 
  Systems/JSON/JsonInstructionBase.h
  Systems/JSON/JsonInstructionNode.h
  Systems/JSON/JsonInstructionSetParser.cpp
  Systems/JSON/JsonInstructionSetParser.h
  Systems/JSON/JsonInstructionSetRunner.h
  Systems/Script/ScriptBackground.cpp 
  Systems/Script/ScriptBackground.h 
  Systems/Script/ScriptIcon.cpp 
  Systems/Script/ScriptIcon.h 
  Systems/Script/ScriptMediaPlayer.cpp 
  Systems/Script/ScriptMediaPlayer.h 
  Systems/Script/ScriptMetronome.cpp
  Systems/Script/ScriptMetronome.h
  Systems/Script/ScriptObjectBase.cpp 
  Systems/Script/ScriptObjectBase.h 
  Systems/Script/ScriptRunnerSignalEmiter.cpp 
  Systems/Script/ScriptRunnerSignalEmiter.h 
  Systems/Script/ScriptStorage.cpp 
  Systems/Script/ScriptStorage.h 
  Systems/Script/ScriptTextBox.cpp 
  Systems/Script/ScriptTextBox.h 
  Systems/Script/ScriptThread.cpp 
  Systems/Script/ScriptThread.h 
  Systems/Script/ScriptTimer.cpp 
  Systems/Script/ScriptTimer.h 
  Systems/ScriptRunner.cpp 
  Systems/ScriptRunner.h 
  Systems/ThreadedSystem.cpp 
  Systems/ThreadedSystem.h 
  UISoundEmitter.cpp 
  UISoundEmitter.h 
  Utils/MultiEmitterSoundPlayer.cpp
  Utils/MultiEmitterSoundPlayer.h
  Utils/RaiiFunctionCaller.cpp
  Utils/RaiiFunctionCaller.h
  Utils/UndoRedoFilter.cpp
  Utils/UndoRedoFilter.h
  Widgets/BackgroundWidget.cpp 
  Widgets/BackgroundWidget.h 
  Widgets/ColorPicker.cpp 
  Widgets/ColorPicker.h 
  Widgets/ColorPicker.ui 
  Widgets/Editor/EditorHighlighter.cpp
  Widgets/Editor/EditorHighlighter.h
  Widgets/Editor/EditorSearchBar.cpp
  Widgets/Editor/EditorSearchBar.h
  Widgets/Editor/HighlightedSearchableTextEdit.cpp
  Widgets/Editor/HighlightedSearchableTextEdit.h
  Widgets/FlowLayout.cpp 
  Widgets/FlowLayout.h 
  Widgets/HelpOverlay.cpp 
  Widgets/HelpOverlay.h 
  Widgets/HelpOverlay.ui 
  Widgets/IWidgetBaseInterface.h 
  Widgets/MenuButton.cpp 
  Widgets/MenuButton.h 
  Widgets/OverlayBase.cpp 
  Widgets/OverlayBase.h 
  Widgets/Player/MediaPlayer.cpp 
  Widgets/Player/MediaPlayer.h   
  Widgets/ProjectCardSelectionWidget.cpp 
  Widgets/ProjectCardSelectionWidget.h 
  Widgets/ProjectCardSelectionWidget.ui 
  Widgets/ResourceDisplayWidget.cpp 
  Widgets/ResourceDisplayWidget.h 
  Widgets/ResourceDisplayWidget.ui 
  Widgets/SearchWidget.cpp 
  Widgets/SearchWidget.h 
  Widgets/SearchWidget.ui 
  Widgets/ShortcutButton.cpp 
  Widgets/ShortcutButton.h 
  Widgets/TitleLabel.cpp 
  Widgets/TitleLabel.h 
  WindowContext.cpp 
  WindowContext.h 
  main.cpp 
  ../resources.qrc
  ../version.cpp
  ../version.h
)

set(CMAKE_AUTOUIC_SEARCH_PATHS ${CMAKE_AUTOUIC_SEARCH_PATHS} Editor)

if(ANDROID)
  add_library(${PROJECT_NAME} SHARED ${Sources})
else()
  add_executable(${PROJECT_NAME} ${Sources})
endif()

#-----------------------------------------------------------------------------------------
# Libs
#-----------------------------------------------------------------------------------------
target_link_libraries(${PROJECT_NAME}
  PRIVATE
    Qt5::Core
    Qt5::Multimedia
    Qt5::MultimediaWidgets
    Qt5::Network
    Qt5::OpenGL
    Qt5::Qml
    Qt5::Quick
    Qt5::QuickControls2
    Qt5::QuickWidgets
    Qt5::Svg
    Qt5::Widgets
    #Qt5::WidgetsPrivate
    Qt5::WebChannel
    Qt5::Xml
    ${QTAVWIDGETS_LIBRARIES}
    NodeEditor::nodes
    KF5SyntaxHighlighting
    better_enums
    nlohmann_json_schema_validator
    physfs-static)

target_sources(${PROJECT_NAME}
  PRIVATE
    $<TARGET_OBJECTS:SortFilterProxyModel>)

target_include_directories(${PROJECT_NAME}
  PRIVATE
    ${Qt5Core_PRIVATE_INCLUDE_DIRS}
    ${Qt5Widgets_PRIVATE_INCLUDE_DIRS}
    ${QTAVWIDGETS_INCLUDE_DIRS}
    ${NodeEditor_INCLUDE_DIRS}
    ${PhysicsFS_INCLUDE_DIRS}
    $<TARGET_PROPERTY:SortFilterProxyModel,INTERFACE_INCLUDE_DIRECTORIES>)

target_compile_definitions(${PROJECT_NAME}
  PRIVATE
    $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>
    $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_DECLARATIVE_DEBUG>
    ${NodeEditor_DEFINITIONS})

#-----------------------------------------------------------------------------------------
# Version and icon
#-----------------------------------------------------------------------------------------
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
set(APPNAME ${PROJECT_NAME})
set(SETICONPATH ON)
set(ICONPATH "${CMAKE_SOURCE_DIR}/resources/img/Icon.ico")

set(${PROJECT_NAME}_VERSION_MAJOR 1)
set(${PROJECT_NAME}_VERSION_MINOR 2)
set(${PROJECT_NAME}_VERSION_PATCH 0)

set(${PROJECT_NAME}_VERSION "${${PROJECT_NAME}_VERSION_MAJOR}.${${PROJECT_NAME}_VERSION_MINOR}.${${PROJECT_NAME}_VERSION_PATCH}")
set(VERSION_DOT ${${PROJECT_NAME}_VERSION_MAJOR}.${${PROJECT_NAME}_VERSION_MINOR}.${${PROJECT_NAME}_VERSION_PATCH} CACHE INTERNAL "")
set(VERSION_COMMA ${${PROJECT_NAME}_VERSION_MAJOR},${${PROJECT_NAME}_VERSION_MINOR},${${PROJECT_NAME}_VERSION_PATCH} CACHE INTERNAL "")

set_target_properties(${PROJECT_NAME} PROPERTIES VERSION "${${PROJECT_NAME}_VERSION}")

set(PROJECT_VERSION ${${PROJECT_NAME}_VERSION})

get_target_property(OUTPUT_BASENAME ${PROJECT_NAME} OUTPUT_NAME)
set(OUTPUT_FILENAME "$<TARGET_FILE_NAME:${PROJECT_NAME}>")

target_sources(${PROJECT_NAME}
  PRIVATE
  "${CMAKE_SOURCE_DIR}/version.cpp"
  "${CMAKE_SOURCE_DIR}/version.h.in"
  "${CMAKE_SOURCE_DIR}/version_win.rc.in"
  "${PROJECT_BINARY_DIR}/version_win.rc"
  )

configure_file(
  "${CMAKE_SOURCE_DIR}/version_win.rc.in"
  "${PROJECT_BINARY_DIR}/version_win.rc"
)

configure_file_generate(
  "${CMAKE_SOURCE_DIR}/version.h.in"
  "${CMAKE_CURRENT_BINARY_DIR}/out_Version.h"
)
